ensure faqv2 block width is as wide as default-content-wrapper on tablet

--- a/express/blocks/faqv2/faqv2.css
+++ b/express/blocks/faqv2/faqv2.css
@@ -272,6 +272,12 @@ main .section .faqv2 {
 	}
 }
 
+@media (min-width: 768px) {
+	.section:has(.faqv2) {
+		max-width: 540px;
+	}
+}
+
 @media (min-width: 900px) {
 	.faqv2 {
 		width: 648px;
